Title overflow fix and titleband

--- a/src/components/blogposts/blogpage.module.css
+++ b/src/components/blogposts/blogpage.module.css
@@ -141,7 +141,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 90%;
     background-image: url('/images/headerbackground.png');
     background-size: cover;
