--- a/src/components/header/title.module.css
+++ b/src/components/header/title.module.css
@@ -3,7 +3,8 @@
     text-align: center;
     font-size: 3rem;
     margin-bottom: 60px;
-    margin-top: 80px;
+    margin-top: 60px;
+    user-select: none;
 }
 
 .h1Title>span {
